[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffx"
version = "2.1.0"
description = "Fast Function Extraction: A fast, scalable, and deterministic symbolic regression tool."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Trent McConaghy", email = "gtrent@gmail.com" },
    { name = "Nate Kupp", email = "nathan.kupp@gmail.com" },
]
maintainers = [{ name = "Nate Kupp", email = "nathan.kupp@gmail.com" }]
keywords = ["symbolic regression", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "click>=5.0",
    "contextlib2>=0.5.4",
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.scripts]
ffx = "ffx.cli:main"

[project.urls]
Homepage = "https://github.com/natekupp/ffx"
Repository = "https://github.com/natekupp/ffx"

[tool.hatch.build.targets.wheel]
packages = ["ffx"]

[dependency-groups]
dev = [
    "coveralls>=4.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
    "ty>=0.0.1a12",
]

[tool.ruff]
lint.ignore = ["E741"]
